workloads/obsidian-livesync/couchdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchdb
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchdb
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      containers:
      - name: couchdb
        image: couchdb:3.3.3
        ports:
        - containerPort: 5984
          name: couch
        volumeMounts:
        - name: data
          mountPath: /opt/couchdb/data
        - name: etc
          mountPath: /opt/couchdb/etc/local.d
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: couchdb-data
      - name: etc
        persistentVolumeClaim:
          claimName: couchdb-etc
---
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  namespace: default
spec:
  ports:
  - name: couch
    port: 5984
    targetPort: 5984
  selector:
    app: couchdb
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: obsidian-livesync
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`obsidian-livesync.bapttf.com`)
    kind: Rule
    services:
    - name: couchdb
      port: 5984
  tls: {}
